# benchmark

./: CMakeLists.txt  CMakePresets.json  README.md  RootModel.hpp  TorchModel.hpp  bm_ops.cpp  conanfile.py  func.cpp  main.cpp  test_root.cpp  test_tensor.cpp  test_torch.cpp
